--- a/index.html
+++ b/index.html
@@ -310,12 +310,12 @@
        <div class="container">
                <div class="address_2">
                   <div class="row">
-                     <div class="col-sm-12 col-md-12 col-lg-4 pb-3">
+                     <div class="col-sm-12 col-md-12 col-lg-3 pb-3">
                        <div class="site_info">
                           <span class="info_icon"><a href="tel:+85292771313"> <img src="images/icons8-call-50.png" width="20px"/></a></span>
                           <span style="margin-top: 10px;"><a href="tel:+85292771313" style="color:WHITE"> +85292771313</a></span></div>
                      </div>
-                     <div class="col-sm-12 col-md-12 col-lg-4 pb-3 mt-lg-3 mt-md-3">
+                     <div class="col-sm-12 col-md-12 col-lg-3 pb-3 mt-lg-3 mt-md-3">
                        <div class="site_info">
                           <a href="https://wa.me/+85292771313"><span class="info_icon"><img src="images/icons8-whatsapp-50.png" width="20px" /></span>
                            <span style="margin-top: 10px; color:WHITE"> +85292771313 </span></a></div>
@@ -324,11 +324,19 @@
                        <div class="site_info">
                           <span class="info_icon"><img src="images/email-icon.png" width="20px" /></span>
                            <span style="margin-top: 10px;"><a style="color:#89CFF0" href="mailto:abilitylimited2022@gmail.com">
-                               abilitylimited2022@gmail.com
+                               abilitylimited2022@gmail.com</span>
                            </a>
-                           </span></div>
+                           </div>
                      </div>
-                     </div> 
+                      <div class="col-sm-12 col-md-12 col-lg-2 pb-3 mt-lg-3 mt-md-3">
+                          <div class="site_info">
+                              <a style="color:#89CFF0" href="https://www.instagram.com/abilitylimitedfitness/">
+                                  <span class="info_icon">
+                                  <img src="images/icons8-instagram-40.png" width="20px" />
+                                  </span>
+                           </a></div>
+                      </div>
+                     </div>
                   </div>
                </div>
                   <div class="menu_main">
