focus in -> focus on

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                            <div class="carousel-caption ">
                               <h1 style="color:#ffffff">Welcome to <strong class="color">Our Studio</strong></h1>
-                              <p>Conveniently sitting at Central office area, our gym provides you with a high level of privacy, allowing you to focus in nothing, but your training.  </p>
+                              <p>Conveniently sitting at Central office area, our gym provides you with a high level of privacy, allowing you to focus on nothing, but your training.  </p>
                               <a class="btn btn-lg btn-primary" href="#contact_us" role="button">Contact us </a>
                            </div>
                         </div>
