--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                      </p>
                      <p><h2>Facility rental</h2>
                      <span>You and your coach will have exclusive access to our approximately 500 sq ft facility. No one will be
-                     starring at you are focusing on your training.</span>
+                     starring at you, while you are focusing on your training.</span>
                      </p>
                      <p><h2>Muay Thai training</h2>
                      <span> Professional Muay Thai training by 2017 Hong Kong Muay Thai championship B grade 1st runner. Coach Lam
