Coach Lam fuck yeah

--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
                      </p>
                      <p><h2>Muay Thai training</h2>
                      <span> Professional Muay Thai training by 2017 Hong Kong Muay Thai championship B grade 1st runner. Coach Lam
-                     has over eight years of professional Muay Thai competitions. On top of that, Coach Lam also has  a few years
+                     has over eight years of experience with professional Muay Thai competitions.
+                     On top of that, Coach Lam also has  a few years
                      of MMA and BJ competition experience.
                      </span>
                      </p>
