more grammar fixes

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                      </span>
                      </p>
                      <p><h2>Functional training</h2>
-                     <span>Functional training is a set of exercises that help you perform activities in everyday life more easily.
+                     <span>Functional training is a set of exercises that help you to perform activities in everyday life more easily.
                      A typical routine involves the whole body, improving core strength and stability.
                      </span>
                      </p>
