more grammar fixes

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   <div class="titlepage" >
                      <h1><strong class="black"> Our</strong> Services</h1>
                      <p><h2>Personal training</h2>
-                     <span>One on one private coaching service, custom designed for each of your unique training goal.
+                     <span>One-on-one private coaching service, custom designed for each of your unique training goal.
                      Our services include, but limited to body sculpting, fat burning, dexterity training, strength
                      and conditioning. We are here to realize your dream together.
                      </span>
