but limited -> but not limited

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                      <h1><strong class="black"> Our</strong> Services</h1>
                      <p><h2>Personal training</h2>
                      <span>One-on-one private coaching service, custom designed for each of your unique training goal.
-                     Our services include, but limited to body sculpting, fat burning, dexterity training, strength
+                     Our services include, but not limited to body sculpting, fat burning, dexterity training, strength
                      and conditioning. We are here to realize your dream together.
                      </span>
                      </p>
