fix spelling error

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <div class="row">
                <div class="col-md-12 ">
                   <div class="titlepage" id="testimonials">
-                     <h2> Testmonial</h2>
+                     <h2>Testimonials</h2>
                      <span style="text-align: center;">
                          Let's see what our current clients have to share!
                      </span>
@@ -347,7 +347,7 @@
                         <ul>
                            <li class="#"><a href="#">Home</a></li>
                            <li><a href="#about_us">About</a></li>
-                           <li><a href="#testimonials">Testmonial</a></li>
+                           <li><a href="#testimonials">Testimonial</a></li>
                            <li><a href="#contact_us">Contact Us</a></li>
                         </ul>
                      </div>
