more spelling jazz

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                               <ul class="menu-area-main">
                                   <li> <a href="#">Home</a> </li>
                                   <li> <a href="#our_services">Our Services</a> </li>
-                                  <li><a href="#testimonials">Testmonial</a></li>
+                                  <li><a href="#testimonials">Testmonials</a></li>
                                   <li><a href="#stories">Stories</a></li>
                                   <li><a href="#contact_us">Contact Us</a></li>
                               </ul>
