--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                               <ul class="menu-area-main">
                                   <li> <a href="#">Home</a> </li>
                                   <li> <a href="#our_services">Our Services</a> </li>
-                                  <li><a href="#testimonials">Testimonials</a></li>
-                                  <li><a href="#stories">Stories</a></li>
+                                  <li><a href="#our_facilities">Our Facilities</a></li>
                                   <li><a href="#contact_us">Contact Us</a></li>
                               </ul>
                            </nav>
@@ -138,7 +137,7 @@
     
 
 
-         <div class="clothes_main section " id="stories">
+         <div class="clothes_main section " id="our_facilities">
           <div class="container">
             <div class="row">
                <div class="col-12">
